# mozjpeg-java

./: .gitignore  ExampleUsage.java  README.md  build_all.bat  build_java.bat  build_native.bat  build_native.sh  pom.xml
com/genius/mozjpeg/: MozJpeg.java  MozJpegEncoder.java  MozJpegException.java
com/genius/mozjpeg/internal/: JpegConstants.java  NativeLoader.java
com/genius/mozjpeg/profile/: JpegProfile.java
native/common/: error_mapping.h  jni_util.cpp  jni_util.h
native/mozjpeg/: CMakeLists.txt  mozjpeg_jni.cpp  mozjpeg_wrapper.cpp  mozjpeg_wrapper.h
